task1-cluster/app-manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dodo-app-ingress
  annotations:
    # Assuming standard NGINX ingress controller for Task 1
    # Note: In Task 5, you'll discuss how Istio replaces this with an Istio Gateway
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: dodo-payments.local # You can map this in your local /etc/hosts file to your Load Balancer IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
